# starter-kit-restapi-axum

./: .env  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.sqlx/: query-0152f78ccffe77d17120a54d6ce3dcb6bd67ae17b85cb2fcb5b23455348576fa.json  query-0d9631af6308dc2ff567546586e9d8d73cd7c0f6ac397d1f16e75d2f4518b1dc.json  query-39d1f47e9d90bec81c2c48829972480f5ea13bff24adb3390fdf1c5ed4a6e025.json  query-3e84389cb528feffc3a257301ac56d27a1d563e38381b5751e9fc94084530779.json  query-41cc214d21ee86bcd95a5ebd3fa7d279c3d43df2bd199daef5fee5d631232ca6.json  query-9cc41f1017b51e005d49944cff4e8f65e9e4a2a5e6f31393039234a1bbe5c755.json  query-c3f611f77ad3f285e213d558d3bdfdcd81a2ca1e5698dfc0644ef40d3d476220.json
api_tests/: 1.auth_register.py  1.test_register_success.py  10.test_users_update_admin.py  11.test_users_delete_admin.py  2.auth_login.py  2.test_register_duplicate_email.py  3.auth_refresh_tokens.py  3.test_login_success.py  4.auth_logout.py  4.test_login_failure.py  5.test_auth_logout.py  5.users_get_profile.py  6.test_auth_refresh_token.py  6.users_get_all.py  7.test_users_create_admin.py  7.users_create_admin.py  8.test_users_get_all_admin.py  8.users_update.py  9.test_users_get_by_id.py  A3.auth_refresh_tokens.py  A4.auth_logout.py  B1.users_get_profile.py  B3.users_create_admin.py  B4.users_update.py  B5.users_delete.py  helpers.py
migrations/: 20250926092423_create_users_and_tokens_tables.sql  20250926221502_create_core_tables.sql
src/: main.rs
src/config/: mod.rs
src/domain/: mod.rs  token_model.rs  user_model.rs
src/error/: mod.rs
src/handler/: auth_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/repository/: mod.rs  token_repository.rs  user_repository.rs
src/routes/: auth_route.rs  mod.rs  swagger.rs  user_route.rs
src/usecase/: auth_usecase.rs  mod.rs  user_usecase.rs
