[package]
name = "starter-kit-restapi-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Konfigurasi
config = "0.14"

# Validasi
validator = { version = "0.18", features = ["derive"] }

# Password Hashing
bcrypt = "0.15"

# JWT
jsonwebtoken = "9"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
humantime = "2.1"

# Async Trait
async-trait = "0.1"

# API Documentation (Swagger/OpenAPI)
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }